# Tkinter-Webcam

./: .gitignore  .pylintrc  LICENSE  README.md  example.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  python-publish.yml
tkinter_webcam/: webcam.py
