[metadata]
name = tkinter_webcam
version = 1.0.8
description = Easily display a webcam window in a Tkinter GUI
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthew Kayne
author_email = matthewkayne2004@gmail.com
url = https://github.com/matthewkayne/Tkinter-Webcam

[options]
packages = find:
include_package_data = True
